Fix image wrapping when zoomed in

--- a/index-style.css
+++ b/index-style.css
@@ -50,7 +50,7 @@ a{
 .content1{
     display: flex;
     justify-content: space-between;
-    gap: 15em;
+    flex-wrap: wrap;
 }
 
 #hero-image{
@@ -63,6 +63,7 @@ a{
     flex-direction: column;
     gap:1em;
     align-items: flex-start;
+    max-width: 480px;
 }
 .hero-main{
     font-size: 64px;
